--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
@@ -16,6 +17,8 @@
     },
     "dependencies": {
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.1.6",
+        "vue3-toastify": "^0.0.5"
     }
 }
